--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
-# Default ignored files
-/shelf/
-/workspace.xml
+HELP.md
+build/
+!**/src/main/**
+!**/src/test/**
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### Gradle ###
+.gradle
+gradlew
+gradle.bat
+
+### Logs ###
+*.log
+/gradlew.bat
